remove clipboard mistake

--- a/src/numerics/CMakeLists.txt
+++ b/src/numerics/CMakeLists.txt
@@ -1,4 +1,4 @@
-../src/numerics/CMakeLists.txt# Copyright (c) 2019-2020, Lawrence Livermore National Security, LLC and
+# Copyright (c) 2019-2020, Lawrence Livermore National Security, LLC and
 # other Serac Project Developers. See the top-level LICENSE file for
 # details.
 #
