--- a/examples/using-with-cmake/CMakeLists.txt
+++ b/examples/using-with-cmake/CMakeLists.txt
@@ -5,4 +5,4 @@ include(CMakeFindDependencyMacro)
 find_dependency(serac REQUIRED NO_DEFAULT_PATH PATHS "${SERAC_DIR}/lib/cmake")
 
 add_executable(serac_example serac_example.cpp)
-target_link_libraries(serac_example serac::serac axom)
+target_link_libraries(serac_example serac::serac axom ${MFEM_LIBRARIES})
