fix: import CMake target directly if built with cmake

--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -71,13 +71,17 @@ if(NOT SERAC_FOUND)
     set(SERAC_MFEM_DIR              "@MFEM_DIR@")
     set(SERAC_MFEM_INCLUDE_DIRS     "@MFEM_INCLUDE_DIRS@")
     set(SERAC_MFEM_LIBRARIES        "@MFEM_LIBRARIES@")
+    set(SERAC_MFEM_BUILT_WITH_CMAKE @MFEM_BUILT_WITH_CMAKE@)
     if(NOT MFEM_INCLUDE_DIRS) 
       set(MFEM_INCLUDE_DIRS ${SERAC_MFEM_INCLUDE_DIRS}) 
     endif()
     if(NOT MFEM_LIBRARIES) 
       set(MFEM_LIBRARIES ${SERAC_MFEM_LIBRARIES}) 
     endif()
-    find_package_handle_standard_args(MFEM DEFAULT_MSG MFEM_LIBRARIES MFEM_INCLUDE_DIRS)
+    if(SERAC_MFEM_BUILT_WITH_CMAKE AND NOT MFEM_DIR)
+      set(MFEM_DIR ${SERAC_MFEM_DIR}) 
+      find_dependency(mfem REQUIRED NO_DEFAULT_PATH PATHS "${MFEM_DIR}/lib/cmake/mfem" NAMES MFEM)
+    endif()
   endif()
 
    # tribol
