Add extra dependencies for shared library builds based on review comments

--- a/src/integrators/CMakeLists.txt
+++ b/src/integrators/CMakeLists.txt
@@ -16,15 +16,13 @@ set(integrators_headers
     wrapper_integrator.hpp
     )
 
-set(integrators_depends mfem mpi)
+set(integrators_depends infrastructure mfem mpi)
 blt_list_append( TO integrators_depends ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
 blt_add_library(
     NAME        integrators
     SOURCES     ${integrators_sources}
     HEADERS     ${integrators_headers}
-    DEPENDS_ON  ${integrators_depends}
-    #DEPENDS_ON  mpi mfem hypre blas lapack parmetis metis 
     )
 
 target_include_directories(integrators PUBLIC 
