--- a/src/infrastructure/CMakeLists.txt
+++ b/src/infrastructure/CMakeLists.txt
@@ -18,7 +18,7 @@ set(infrastructure_sources
     terminator.cpp
     )
 
-set(infrastructure_depends axom mpi)
+set(infrastructure_depends axom fmt mpi)
 blt_list_append( TO infrastructure_depends ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
 blt_add_library(
