--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -78,6 +78,9 @@ if(NOT SERAC_FOUND)
     if(NOT MFEM_LIBRARIES) 
       set(MFEM_LIBRARIES ${SERAC_MFEM_LIBRARIES}) 
     endif()
+    # This will import the targets directly if they exist
+    # Needed for dynamic MFEM library
+    # TODO: Construct CMake target from GNU Make-build MFEM
     if(SERAC_MFEM_BUILT_WITH_CMAKE AND NOT MFEM_DIR)
       set(MFEM_DIR ${SERAC_MFEM_DIR}) 
       find_dependency(mfem REQUIRED NO_DEFAULT_PATH PATHS "${MFEM_DIR}/lib/cmake/mfem" NAMES MFEM)
