Put serac driver back to just serac

--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -4,9 +4,10 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
-blt_add_executable( NAME       serac_driver
-                    SOURCES    serac.cpp
-                    DEPENDS_ON numerics infrastructure physics coefficients mfem mpi cli11
+blt_add_executable( NAME        serac_driver
+                    SOURCES     serac.cpp
+                    DEPENDS_ON  numerics infrastructure physics coefficients mfem mpi
+                    OUTPUT_NAME serac
                     )
 
 install( TARGETS serac_driver
