--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -26,6 +26,9 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     -
+        name: Checkout
+        uses: actions/checkout@v2
+    -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
     -
@@ -37,12 +40,13 @@ jobs:
     -
         name: Build and push Clang 10
         id: docker_build
-        uses: docker/build-push-action@v1.1.1
+        uses: docker/build-push-action@v2
         with:
           push: false
           tags: seracllnl/tpls:clang10
           file: ./scripts/docker/dockerfile_clang-10
-          outputs: ./host-configs/docker
+          context: .
+          platforms: linux/amd64
     - 
         uses: actions/upload-artifact@v2
         with:
