--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -61,9 +61,6 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
@@ -76,8 +73,9 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
+          push: false
+          tags: seracllnl/tpls:clang10
+          file: ./scripts/docker/dockerfile_clang-10
+          outputs: ./host-configs/docker
           context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/386
-          push: true
-          tags: user/app:latest
+          platforms: linux/amd64
