--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -17,65 +17,38 @@ on:
 #         required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-# jobs:
-#   main:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
-
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#     # Runs a single command using the runners shell
-#     -
-#         name: Checkout
-#         uses: actions/checkout@v2
-#     -
-#         name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1
-#     -
-#         name: Login to DockerHub
-#         uses: docker/login-action@v1 
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_TOKEN }}
-#     -
-#         name: Build and push Clang 10
-#         id: docker_build
-#         uses: docker/build-push-action@v2
-#         with:
-#           push: false
-#           tags: seracllnl/tpls:clang10
-#           file: ./scripts/docker/dockerfile_clang-10
-#           outputs: ./host-configs/docker
-#           context: .
-#           platforms: linux/amd64
-#     - 
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: hostconfigs
-#           path: ./host-configs/docker/*
 jobs:
-  path-context:
+  main:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      -
+    # Runs a single command using the runners shell
+    -
         name: Checkout
         uses: actions/checkout@v2
-      -
+    -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
+    -
         name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+    -
+        name: Build and push Clang 10
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: false
           tags: seracllnl/tpls:clang10
           file: ./scripts/docker/dockerfile_clang-10
-          outputs: ./host-configs/docker
           context: .
           platforms: linux/amd64
+    - 
+        uses: actions/upload-artifact@v2
+        with:
+          name: hostconfigs
+          path: ./host-configs/docker/*
