--- a/scripts/docker/dockerfile_clang-6
+++ b/scripts/docker/dockerfile_clang-6
@@ -17,4 +17,7 @@ RUN git clone --recursive https://github.com/LLNL/serac.git
 
 RUN ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ --spec=%clang@6.0.0 --prefix=/home/serac/serac_tpls -k
 
+RUN mkdir -p /home/serac/export_hostconfig
+RUN cp ./serac/*.cmake /home/serac/export_hostconfig
+
 RUN rm -rf serac
