--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,30 +1,21 @@
-# This is a basic workflow that is manually triggered
-
 name: Docker build
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+# Manually triggered
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
-#     inputs:
-#       name:
-#         # Friendly description to be shown in the UI instead of 'name'
-#         description: 'Person to greet'
-#         # Default value if no value is explicitly provided
-#         default: 'World'
-#         # Input has to be provided for the workflow to run
-#         required: true
+    # No input required
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  main:
-    # The type of runner that the job will run on
+  clang10:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      TAG: clang-10
     steps:
-    # Runs a single command using the runners shell
+    - 
+        name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
     -
         name: Checkout
         uses: actions/checkout@v2
@@ -38,17 +29,78 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
-        name: Build and push Clang 10
+        name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: false
-          tags: seracllnl/tpls:clang10
-          file: ./scripts/docker/dockerfile_clang-10
+          push: true
+          tags: joshessmanllnl/actionstest:${{ env.TAG }}
+          file: ./scripts/docker/dockerfile_${{ env.TAG }}
           context: .
           platforms: linux/amd64
+          build-args: branch=${{ steps.extract_branch.outputs.branch }}
     - 
+        name: Get hostconfig
+        run: |
+          echo ${{ steps.docker_build_clang10.outputs.digest }}
+          docker pull joshessmanllnl/actionstest:${{ env.TAG }}
+          docker create --name extract_hc joshessmanllnl/actionstest:${{ env.TAG }}
+          mkdir -p extracted_hc
+          docker cp extract_hc:/home/serac/export_hostconfig ./extracted_hc
+          docker rm extract_hc
+    
+    - 
+        name: Upload hostconfig
         uses: actions/upload-artifact@v2
         with:
-          name: hostconfigs
-          path: ./host-configs/docker/*
+          name: ${{ env.TAG }}_hostconfigs
+          path: ./extracted_hc/export_hostconfig/*
+  gcc8:
+    runs-on: ubuntu-latest
+    env:
+      TAG: gcc-8
+    steps:
+    - 
+        name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+    -
+        name: Checkout
+        uses: actions/checkout@v2
+    -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+    -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: joshessmanllnl/actionstest:${{ env.TAG }}
+          file: ./scripts/docker/dockerfile_${{ env.TAG }}
+          context: .
+          platforms: linux/amd64
+          build-args: branch=${{ steps.extract_branch.outputs.branch }}
+    - 
+        name: Get hostconfig
+        run: |
+          echo ${{ steps.docker_build_clang10.outputs.digest }}
+          docker pull joshessmanllnl/actionstest:${{ env.TAG }}
+          docker create --name extract_hc joshessmanllnl/actionstest:${{ env.TAG }}
+          mkdir -p extracted_hc
+          docker cp extract_hc:/home/serac/export_hostconfig ./extracted_hc
+          docker rm extract_hc
+    
+    - 
+        name: Upload hostconfig
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.TAG }}_hostconfigs
+          path: ./extracted_hc/export_hostconfig/*
