--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -36,12 +36,21 @@ jobs:
         with:
           push: false
           tags: seracllnl/tpls:clang10
-          file: ./scripts/docker/dockerfile_clang-10
+          # file: ./scripts/docker/dockerfile_clang-10
+          file: ./scripts/docker/fake_dockerfile
           context: .
           platforms: linux/amd64
+    -
+        name: Image digest should fail
+        run: echo ${{ steps.docker_build.outputs.digest }}
+    -
+        name: Image digest should pass
+        run: echo ${{ steps.docker_build_clang10.outputs.digest }}
     - 
         name: Get hostconfig from Clang 10
         run: |
+          echo ${{ steps.docker_build.outputs.digest }}
+          echo ${{ steps.docker_build_clang10.outputs.digest }}
           docker create --name extract_hc ${{ steps.docker_build_clang10.outputs.digest }}
           mkdir -p clang10_hc
           docker cp extract_hc:/home/serac/export_hostconfig ./clang10_hc
