--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -42,10 +42,10 @@ jobs:
           platforms: linux/amd64
     -
         name: Image digest should fail
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        run: echo ${{ steps.docker_build.outputs.digest }} && docker images
     -
         name: Image digest should pass
-        run: echo ${{ steps.docker_build_clang10.outputs.digest }}
+        run: echo ${{ steps.docker_build_clang10.outputs.digest }} && docker images
     - 
         name: Get hostconfig from Clang 10
         run: |
