--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -43,11 +43,8 @@ jobs:
           context: .
           platforms: linux/amd64
     -
-        name: Image digest should fail
-        run: echo ${{ steps.docker_build.outputs.digest }} && docker images
-    -
         name: Image digest should pass
-        run: echo ${{ steps.docker_build_clang10.outputs.digest }} && docker images
+        run: echo ${{ steps.docker_build_clang10.outputs.digest }} && docker ps
     - 
         name: Get hostconfig from Clang 10
         run: |
