--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -48,9 +48,9 @@ jobs:
     - 
         name: Get hostconfig from Clang 10
         run: |
-          echo ${{ steps.docker_build.outputs.digest }}
           echo ${{ steps.docker_build_clang10.outputs.digest }}
-          docker create --name extract_hc ${{ steps.docker_build_clang10.outputs.digest }}
+          docker pull joshessmanllnl/actionstest:latest
+          docker create --name extract_hc joshessmanllnl/actionstest:latest
           mkdir -p clang10_hc
           docker cp extract_hc:/home/serac/export_hostconfig ./clang10_hc
           docker rm extract_hc
