--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,22 +1,17 @@
-# This is a basic workflow that is manually triggered
-
 name: Docker build
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+# Manually triggered
 on:
   workflow_dispatch:
     # No input required
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   main:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      TAG: latest
+      DOCKERFILE: fake_dockerfile
     steps:
-    # Runs a single command using the runners shell
     -
         name: Checkout
         uses: actions/checkout@v2
@@ -30,34 +25,28 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
-        name: Build and push Clang 10
-        id: docker_build_clang10
+        name: Build and push
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
-          # push: false
-          # tags: seracllnl/tpls:clang10
           push: true
-          tags: joshessmanllnl/actionstest:latest
-          # file: ./scripts/docker/dockerfile_clang-10
-          file: ./scripts/docker/fake_dockerfile
+          tags: joshessmanllnl/actionstest:$TAG
+          file: ./scripts/docker/$DOCKERFILE
           context: .
           platforms: linux/amd64
-    -
-        name: Image digest should pass
-        run: echo ${{ steps.docker_build_clang10.outputs.digest }} && docker ps
     - 
-        name: Get hostconfig from Clang 10
+        name: Get hostconfig
         run: |
           echo ${{ steps.docker_build_clang10.outputs.digest }}
-          docker pull joshessmanllnl/actionstest:latest
-          docker create --name extract_hc joshessmanllnl/actionstest:latest
+          docker pull joshessmanllnl/actionstest:$TAG
+          docker create --name extract_hc joshessmanllnl/actionstest:$TAG
           mkdir -p clang10_hc
-          docker cp extract_hc:/home/serac/export_hostconfig ./clang10_hc
+          docker cp extract_hc:/home/serac/export_hostconfig ./extracted_hc
           docker rm extract_hc
     
     - 
         name: Upload hostconfig from Clang 10
         uses: actions/upload-artifact@v2
         with:
-          name: cl10_hostconfigs
-          path: ./clang10_hc/export_hostconfig/*
+          name: ${TAG}_hostconfigs
+          path: ./extracted_hc/export_hostconfig/*
