--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -30,17 +30,17 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: joshessmanllnl/actionstest:$TAG
-          file: ./scripts/docker/$DOCKERFILE
+          tags: joshessmanllnl/actionstest:${{ env.TAG }}
+          file: ./scripts/docker/${{ env.DOCKERFILE }}
           context: .
           platforms: linux/amd64
     - 
         name: Get hostconfig
         run: |
           echo ${{ steps.docker_build_clang10.outputs.digest }}
-          docker pull joshessmanllnl/actionstest:$TAG
-          docker create --name extract_hc joshessmanllnl/actionstest:$TAG
-          mkdir -p clang10_hc
+          docker pull joshessmanllnl/actionstest:${{ env.TAG }}
+          docker create --name extract_hc joshessmanllnl/actionstest:${{ env.TAG }}
+          mkdir -p extracted_hc
           docker cp extract_hc:/home/serac/export_hostconfig ./extracted_hc
           docker rm extract_hc
     
@@ -48,5 +48,5 @@ jobs:
         name: Upload hostconfig from Clang 10
         uses: actions/upload-artifact@v2
         with:
-          name: ${TAG}_hostconfigs
+          name: ${{ env.TAG }}_hostconfigs
           path: ./extracted_hc/export_hostconfig/*
