--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -6,11 +6,10 @@ on:
     # No input required
 
 jobs:
-  main:
+  clang10:
     runs-on: ubuntu-latest
     env:
-      TAG: latest
-      DOCKERFILE: fake_dockerfile
+      TAG: clang-10
     steps:
     -
         name: Checkout
@@ -31,7 +30,7 @@ jobs:
         with:
           push: true
           tags: joshessmanllnl/actionstest:${{ env.TAG }}
-          file: ./scripts/docker/${{ env.DOCKERFILE }}
+          file: ./scripts/docker/dockerfile_${{ env.TAG }}
           context: .
           platforms: linux/amd64
     - 
@@ -45,7 +44,50 @@ jobs:
           docker rm extract_hc
     
     - 
-        name: Upload hostconfig from Clang 10
+        name: Upload hostconfig
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.TAG }}_hostconfigs
+          path: ./extracted_hc/export_hostconfig/*
+  gcc8:
+    runs-on: ubuntu-latest
+    env:
+      TAG: gcc-8
+    steps:
+    -
+        name: Checkout
+        uses: actions/checkout@v2
+    -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+    -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: joshessmanllnl/actionstest:${{ env.TAG }}
+          file: ./scripts/docker/dockerfile_${{ env.TAG }}
+          context: .
+          platforms: linux/amd64
+    - 
+        name: Get hostconfig
+        run: |
+          echo ${{ steps.docker_build_clang10.outputs.digest }}
+          docker pull joshessmanllnl/actionstest:${{ env.TAG }}
+          docker create --name extract_hc joshessmanllnl/actionstest:${{ env.TAG }}
+          mkdir -p extracted_hc
+          docker cp extract_hc:/home/serac/export_hostconfig ./extracted_hc
+          docker rm extract_hc
+    
+    - 
+        name: Upload hostconfig
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.TAG }}_hostconfigs
