removed old clang6 dockerfile, use system mpich/cmake when possible

--- a/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
@@ -44,6 +44,13 @@ packages:
     buildable: false
   mpilander:
     buildable: false
+    # Spack may grab for mpi & we don't want to use them
+  mpi:
+    buildable: false
+  mpich:
+    externals:
+    - spec: mpich@3.2
+      prefix: /usr
 
   # System level packages to not build
   autotools:
