--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -3,7 +3,7 @@ LABEL maintainer="bramwell1@llnl.gov"
 ARG branch=develop
 
 RUN sudo apt-get update -y
-RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich -fy
+RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich cmake -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo rm /usr/bin/python
 RUN sudo ln -s python3 /usr/bin/python # Compatibility with legacy Python
