--- a/scripts/uberenv/spack_configs/docker/ubuntu18/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu18/packages.yaml
@@ -92,3 +92,7 @@ packages:
   # Globally lock in version of CMake
   cmake:
     version: [3.10.1]
+    buildable: false
+    externals:
+    - spec: cmake@3.10.2
+      prefix: /usr/bin/
