Remove stdlib from compiler spec, Clarify docker docs, Stop perl from building

--- a/scripts/uberenv/spack_configs/docker/ubuntu18/compilers.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu18/compilers.yaml
@@ -2,8 +2,7 @@ compilers:
   - compiler:
       environment: {}
       extra_rpaths: []
-      flags:
-        cxxflags: -stdlib=libc++
+      flags: {}
       modules: []
       operating_system: ubuntu18.04
       paths:
