--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -2,21 +2,20 @@ FROM axom/compilers:gcc-8
 LABEL maintainer="bramwell1@llnl.gov"
 
 RUN sudo apt-get update -y
-RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich -fy
+RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich python3 -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
-RUN sudo rm /usr/bin/python
-RUN sudo ln -s python3 /usr/bin/python # Compatibility with legacy Python
+RUN sudo ln -f -s python3 /usr/bin/python # Compatibility with legacy Python
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
 WORKDIR "/home/serac"
 USER serac
 
-RUN git clone --recursive https://github.com/LLNL/serac.git
-RUN cd serac && git checkout ci/essman/docker_build_fixes && cd ..
+RUN git clone -b feature/white238/addinlet --recursive https://github.com/LLNL/serac.git
 
 # New containers will use Python3
 RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ubuntu16/ \
+                                               --project-json=./serac/scripts/uberenv/project.json \
                                                --spec=%gcc@8.1.0 --prefix=/home/serac/serac_tpls -k
 
 RUN rm -rf serac
