--- a/.github/workflows/docker_build_action/action.yml
+++ b/.github/workflows/docker_build_action/action.yml
@@ -14,26 +14,16 @@ inputs:
 runs:
   using: "composite"
   steps: 
-     - 
-        name: Extract branch name
-        shell: bash
+     -  shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
-    -
-        name: Checkout
-        uses: actions/checkout@v2
-    -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-    -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+    -   uses: actions/checkout@v2
+    -   uses: docker/setup-buildx-action@v1
+    -   uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-        name: Build and push
-        id: docker_build
+    -   id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
@@ -42,9 +32,7 @@ runs:
           context: .
           platforms: linux/amd64
           build-args: branch=${{ steps.extract_branch.outputs.branch }}
-    - 
-        name: Get hostconfig
-        run: |
+    -   run: |
           echo ${{ steps.docker_build.outputs.digest }}
           docker pull ${{ inputs.repo }}
           docker create --name extract_hc ${{ inputs.repo }}
@@ -52,9 +40,7 @@ runs:
           docker cp extract_hc:${{ inputs.hostconfig-loc }} ./extracted_hc
           docker rm extract_hc
     
-    - 
-        name: Upload hostconfig
-        uses: actions/upload-artifact@v2
+    -   uses: actions/upload-artifact@v2
         with:
           name: ${{ inputs.repo }}_hostconfig
           path: ./extracted_hc/export_hostconfig/*
