--- a/.github/workflows/docker_build_tpls.yml
+++ b/.github/workflows/docker_build_tpls.yml
@@ -9,108 +9,51 @@ jobs:
   fake:
     runs-on: ubuntu-latest
     name: Builds a fake docker image and extracts a fake hostconfig
+    env:
+      TAG: fake
+      REPO: joshessmanllnl/actionstest:${{ env.TAG }}
+      HOSTCONFIG_LOC: /home/serac/export_hostconfig
+      DOCKERFILE: ./scripts/docker/dockerfile_${{ env.TAG }}
     steps:
-    - uses: actions/checkout@v2 # Required as action is in repo
-    - uses: ./.github/workflows/docker_build_action # Path to custom action
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
       with:
-        dockerfile: './scripts/docker/dockerfile_fake'
-        repo: 'joshessmanllnl/actionstest:fake'
-        hostconfig-loc: '/home/serac/export_hostconfig'
-  # clang10:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     TAG: clang-10
-  #   steps:
-  #   - 
-  #       name: Extract branch name
-  #       shell: bash
-  #       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-  #       id: extract_branch
-  #   -
-  #       name: Checkout
-  #       uses: actions/checkout@v2
-  #   -
-  #       name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
-  #   -
-  #       name: Login to DockerHub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
-  #   -
-  #       name: Build and push
-  #       id: docker_build
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         push: true
-  #         tags: joshessmanllnl/actionstest:${{ env.TAG }}
-  #         file: ./scripts/docker/dockerfile_${{ env.TAG }}
-  #         context: .
-  #         platforms: linux/amd64
-  #         build-args: branch=${{ steps.extract_branch.outputs.branch }}
-  #   - 
-  #       name: Get hostconfig
-  #       run: |
-  #         echo ${{ steps.docker_build_clang10.outputs.digest }}
-  #         docker pull joshessmanllnl/actionstest:${{ env.TAG }}
-  #         docker create --name extract_hc joshessmanllnl/actionstest:${{ env.TAG }}
-  #         mkdir -p extracted_hc
-  #         docker cp extract_hc:/home/serac/export_hostconfig ./extracted_hc
-  #         docker rm extract_hc
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ${{ env.REPO }}
+        file: ${{ env.DOCKERFILE }}
+        context: .
+        platforms: linux/amd64
+        build-args: branch=${{ steps.extract_branch.outputs.branch }}
+
+    - name: Get hostconfig
+      run: |
+        echo ${{ steps.docker_build.outputs.digest }}
+        docker pull ${{ env.REPO }}
+        docker create --name extract_hc ${{ env.REPO }}
+        mkdir -p extracted_hc
+        docker cp extract_hc:${{ env.HOSTCONFIG_LOC }} ./extracted_hc
+        docker rm extract_hc
     
-  #   - 
-  #       name: Upload hostconfig
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: ${{ env.TAG }}_hostconfigs
-  #         path: ./extracted_hc/export_hostconfig/*
-  # gcc8:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     TAG: gcc-8
-  #   steps:
-  #   - 
-  #       name: Extract branch name
-  #       shell: bash
-  #       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-  #       id: extract_branch
-  #   -
-  #       name: Checkout
-  #       uses: actions/checkout@v2
-  #   -
-  #       name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
-  #   -
-  #       name: Login to DockerHub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
-  #   -
-  #       name: Build and push
-  #       id: docker_build
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         push: true
-  #         tags: joshessmanllnl/actionstest:${{ env.TAG }}
-  #         file: ./scripts/docker/dockerfile_${{ env.TAG }}
-  #         context: .
-  #         platforms: linux/amd64
-  #         build-args: branch=${{ steps.extract_branch.outputs.branch }}
-  #   - 
-  #       name: Get hostconfig
-  #       run: |
-  #         echo ${{ steps.docker_build_clang10.outputs.digest }}
-  #         docker pull joshessmanllnl/actionstest:${{ env.TAG }}
-  #         docker create --name extract_hc joshessmanllnl/actionstest:${{ env.TAG }}
-  #         mkdir -p extracted_hc
-  #         docker cp extract_hc:/home/serac/export_hostconfig ./extracted_hc
-  #         docker rm extract_hc
-    
-  #   - 
-  #       name: Upload hostconfig
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: ${{ env.TAG }}_hostconfigs
-  #         path: ./extracted_hc/export_hostconfig/*
+    - name: Upload hostconfig
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ env.TAG }}_hostconfigs
+        path: ./extracted_hc/export_hostconfig/*
