fix: test hostconfig before continuing

--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -6,19 +6,23 @@ RUN sudo apt-get update -y
 RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich cmake -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo rm /usr/bin/python
-RUN sudo ln -s python3 /usr/bin/python # Compatibility with legacy Python
+RUN sudo ln -s -f python3 /usr/bin/python # Compatibility with legacy Python
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
 WORKDIR "/home/serac"
 USER serac
 
-RUN git clone --recursive https://github.com/LLNL/serac.git
-RUN cd serac && git checkout $branch && cd ..
+RUN git clone --recursive --branch $branch --single-branch --depth 1 https://github.com/LLNL/serac.git
 
 # New containers will use Python3
 RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ubuntu16/ \
                                                --spec=%gcc@8.1.0 --prefix=/home/serac/serac_tpls -k
+
+# Make sure the new hostconfig worked
+RUN pushd serac && python3 config-build.py -hc *.cmake
+RUN pushd build* && make -j && make -j test
+RUN popd && popd
 
 RUN mkdir -p /home/serac/export_hostconfig
 RUN cp ./serac/*.cmake /home/serac/export_hostconfig
