--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -3,7 +3,7 @@ LABEL maintainer="bramwell1@llnl.gov"
 ARG branch=develop
 
 RUN sudo apt-get update -y
-RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich cmake -fy
+RUN sudo apt-get install curl wget ssh pkg-config build-essential libopenblas-dev mpich -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo rm /usr/bin/python
 RUN sudo ln -s -f python3 /usr/bin/python # Compatibility with legacy Python
@@ -12,6 +12,10 @@ RUN sudo useradd -m -s /bin/bash -G sudo serac
 
 WORKDIR "/home/serac"
 USER serac
+
+# Avoid building CMake from scratch
+RUN wget https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh
+RUN sudo sh cmake-3.12.0-Linux-x86_64.sh --prefix=/usr/local --exclude-subdir
 
 RUN git clone --recursive --branch $branch --single-branch --depth 1 https://github.com/LLNL/serac.git
 
