--- a/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
@@ -101,4 +101,8 @@ packages:
 
   # Globally lock in version of CMake
   cmake:
-    version: [3.10.1]
+    version: [3.12.0]
+    buildable: false
+    externals:
+    - spec: cmake@3.12.0
+      prefix: /usr/local/bin/
