--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -10,7 +10,7 @@ RUN sudo ln -s -f python3 /usr/bin/python # Compatibility with legacy Python
 
 # Avoid building CMake from scratch
 RUN wget https://cmake.org/files/v3.10/cmake-3.10.2-Linux-x86_64.sh
-RUN sudo sh cmake-3.10.2-Linux-x86_64.sh --prefix=/usr/local --exclude-subdir
+RUN sudo sh cmake-3.10.2-Linux-x86_64.sh --prefix=/usr --exclude-subdir
 RUN ls /usr/local/bin
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
