this makes no sense pt 3

--- a/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
@@ -103,3 +103,8 @@ packages:
     externals:
     - spec: cmake@3.10
       prefix: /usr/bin/
+  openssl:
+    buildable: false
+    externals:
+    - spec: openssl
+      prefix: /usr
