this makes no sense pt 4

--- a/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
@@ -98,13 +98,11 @@ packages:
     externals:
     - spec: openblas
       prefix: /usr
+
+  # Globally lock in version of CMake
   cmake:
+    version: [3.10.1]
     buildable: false
     externals:
-    - spec: cmake@3.10
+    - spec: cmake@3.10.1
       prefix: /usr/bin/
-  openssl:
-    buildable: false
-    externals:
-    - spec: openssl
-      prefix: /usr
