--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -18,7 +18,7 @@ RUN sudo useradd -m -s /bin/bash -G sudo serac
 WORKDIR "/home/serac"
 USER serac
 
-RUN git clone --recursive --branch $branch --single-branch --depth 1 https://github.com/LLNL/serac.git
+RUN git clone --recursive --branch $branch --single-branch --depth 1 https://github.com/joshessman-llnl/serac.git
 
 # New containers will use Python3
 RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ubuntu16/ --spec=%gcc@8.1.0 --prefix=/home/serac/serac_tpls -k
