fixed build path

--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -25,8 +25,8 @@ RUN git clone --recursive --branch $branch --single-branch --depth 1 https://git
 RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ubuntu16/ --spec=%gcc@8.1.0 --prefix=/home/serac/serac_tpls -k
 
 # Make sure the new hostconfig worked
-RUN pushd serac && python3 config-build.py -hc *.cmake
-RUN pushd build* && make -j && make -j test
+RUN pushd serac && python3 config-build.py -hc *.cmake -bp build
+RUN pushd build && make -j && make -j test
 RUN popd && popd
 
 RUN mkdir -p /home/serac/export_hostconfig
