--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -12,7 +12,6 @@ RUN sudo ln -s -f python3 /usr/bin/python # Compatibility with legacy Python
 # Avoid building CMake from scratch
 RUN wget https://cmake.org/files/v3.10/cmake-3.10.1-Linux-x86_64.sh
 RUN sudo sh cmake-3.10.1-Linux-x86_64.sh --prefix=/usr --exclude-subdir
-RUN ls /usr/bin
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
@@ -25,9 +24,7 @@ RUN git clone --recursive --branch $branch --single-branch --depth 1 https://git
 RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/uberenv/spack_configs/docker/ubuntu16/ --spec=%gcc@8.1.0 --prefix=/home/serac/serac_tpls -k
 
 # Make sure the new hostconfig worked
-RUN pushd serac && python3 config-build.py -hc *.cmake -bp build
-RUN pushd build && make -j && make -j test
-RUN popd && popd
+RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test
 
 RUN mkdir -p /home/serac/export_hostconfig
 RUN cp ./serac/*.cmake /home/serac/export_hostconfig
